fixed issue with html docs opening in internal browser (used java.awt.Desktop instead)