@@ -19,10 +19,11 @@
  */
 package blue.application;
 
+import java.awt.Desktop;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.io.File;
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import org.openide.awt.HtmlBrowser.URLDisplayer;
 import org.openide.util.Exceptions;
@@ -30,9 +31,14 @@ import org.openide.util.Exceptions;
 public final class BlueManualAction implements ActionListener {
 
     public void actionPerformed(ActionEvent e) {
+        String url = getPath();
         try {
-            URLDisplayer.getDefault().showURL(new URL(getPath()));
-        } catch (MalformedURLException ex) {
+            if (Desktop.isDesktopSupported()) {
+                Desktop.getDesktop().browse(new URI(url));
+            } else {
+                URLDisplayer.getDefault().showURL(new URL(url));
+            }
+        } catch (Exception ex) {
             Exceptions.printStackTrace(ex);
         }
     }
